--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bai Xiao"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Professor, School of Computer Science and Engineering,  Jiangxi Reseaarch Institute, Beihang University"
   location         : "Beijing"
   employer         : "Beihang University"
   uri              : # URL
