--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ author:
   uri              : # URL
   email            : "baixiao@buaa.edu.cn" 
 
-  # # Academic websites
+  # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
-  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=k6l1vZIAAAAJ&hl=zh-CN"
   # impactstory      : # URL
   # orcid            : "http://orcid.org/yourorcidurl"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
